2008-05-13  Kevin B. Kenny  <kennykb@acm.org>

	* Makefile (deleted): Removed a superfluous file from an
		earlier stage of development.
	* generic/tdbcodbc.c (TablesStmtInitMethod,ResultSetNextrowMethod): 
		Removed a cut-and-paste error in TablesStmtInitMethod that
		caused a pointer smash, and added a cast to silence a gcc
		warning.
	* tests/tdbcodbc.test: Corrected misnumbering of tests, and added
		code to remove the test database on startup to avoid running
		with old data if a previous test run aborted.
	
2008-05-10  Kevin B. Kenny  <kennykb@acm.org>

	* tests/tdbcodbc.test (tdbcodbc-9.9): Corrected invalid test numbering.
	
2008-05-01  Kevin B. Kenny  <kennykb@acm.org>
	
	* tdbcodbc/Makefile.in:
	* tdbcodbc/TODO:
	* tdbcodbc/aclocal.m4:
	* tdbcodbc/configure:
	* tdbcodbc/configure.in:
	* tdbcodbc/generic/tdbcodbc.c:
	* tdbcodbc/library/tdbcodbc.tcl:
	* tdbcodbc/tclconfig/ChangeLog:
	* tdbcodbc/tclconfig/README.txt:
	* tdbcodbc/tclconfig/install-sh:
	* tdbcodbc/tclconfig/tcl.m4:
	* tdbcodbc/tests/all.tcl:
	* tdbcodbc/tests/tdbcodbc.test:
	* tdbcodbc/tests/test.mdb:
	Initial commit of a 'tdbcodbc' package that provides a reference
	implementation of a TDBC driver layered atop ODBC.