@@ -18,5 +18,3 @@ Direct result conversions - any left?
 
 WVARCHAR stuff
 
-Pure-Tcl driver example (sqlite3 / unix)
-
